# BebopS

./: .gitingnore  .travis.yml  BebopS  CHANGELOG.rst  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md  SPHINX.md  gazebo9.sh  package.xml
.github/: config.yml
.github/workflows/: main.yml  melodic.yml  noetic.yml
config/: config.yaml  defaults.yaml  wind_turbine.yaml
include/bebopS/: common.h  extendedKalmanFilter.h  filter_parameters.h  parameters.h  parameters_ros.h  position_controller.h  position_controller_with_bebop.h  position_controller_with_sphinx.h  stabilizer_types.h  waypoint_filter.h  waypointfilter_parameters.h
include/bebopS_msgs/: conversion.h  default_topics.h
include/bebop_msgs/: default_topics.h
include/bebop_simulator/: common.h  extendedKalmanFilter.h  filter_parameters.h  parameters.h  parameters_ros.h  position_controller.h  position_controller_with_bebop.h  position_controller_with_sphinx.h  spline_trajectory_generator.h  stabilizer_types.h  waypoint_filter.h  waypointfilter_parameters.h
include/bebop_simulator_msgs/: default_topics.h
include/optitrack_msgs/: default_topics.h
include/takeoff_sphinx_test/: TakeOffController.hpp
include/teamsannio_med_control/: common.h  extendedKalmanFilter.h  filter_parameters.h  parameters.h  parameters_ros.h  position_controller.h  position_controller_with_bebop.h  stabilizer_types.h  waypoint_filter.h  waypointfilter_parameters.h
include/teamsannio_msgs/: default_topics.h
launch/: Takeoff.launch  bebop_without_controller.launch  gazebo_bebop.launch  multiple_bebop_without_controller.launch  multiple_task2_world.launch  plots.launch  spawn_bebop.launch  spawn_bebop_only_odometry_and_camera.launch  spawn_bebop_only_odometry_and_camera_with_wind.launch  spawn_bebop_only_odometry_sensor.launch  spawn_bebop_without_wind.launch  spawn_wind_turbine.launch  sphinx_controller_test.launch  task1_world.launch  task1_world_spline.launch  task1_world_with_bebop.launch  task1_world_with_sphinx.launch  task2_world.launch  task2_world_prova.launch  task2_world_with_bebop.launch  task2_world_with_sphinx.launch  task2_world_without_graphs.launch  task2_world_without_graphs_only_ododometry.launch  task2_world_without_graphs_only_ododometry_and_camera_with_wind.launch  task2_world_without_graphs_only_odometry.launch  task2_world_without_graphs_only_odometry_and_camera.launch  task2_world_without_graphs_only_odometry_and_camera_with_wind.launch  task2_world_without_wind.launch  task3_world.launch  teamsannio_control.launch  wind_turbine_control.launch
meshes/: wind_turbine_base.dae  wind_turbine_rotor.dae
msg/: Sphinx.msg  Sphinx_msgs.msg
resource/: EKF_matrix.yaml  bebop.yaml  controller_bebop.yaml  controller_bebop_prova.yaml  spline_trajectory.yaml  waypoint_filter.yaml  waypoints.txt  waypoints0.txt  waypoints1.txt  waypoints2.txt  waypoints3.txt
ros/kinetic/include/gazebo_msgs/: ApplyBodyWrench.h  ApplyBodyWrenchRequest.h  ApplyBodyWrenchResponse.h  ApplyJointEffort.h  ApplyJointEffortRequest.h  ApplyJointEffortResponse.h  BodyRequest.h  BodyRequestRequest.h  BodyRequestResponse.h  ContactState.h  ContactsState.h  DeleteLight.h  DeleteLightRequest.h  DeleteLightResponse.h  DeleteModel.h  DeleteModelRequest.h  DeleteModelResponse.h  GetJointProperties.h  GetJointPropertiesRequest.h  GetJointPropertiesResponse.h  GetLightProperties.h  GetLightPropertiesRequest.h  GetLightPropertiesResponse.h  GetLinkProperties.h  GetLinkPropertiesRequest.h  GetLinkPropertiesResponse.h  GetLinkState.h  GetLinkStateRequest.h  GetLinkStateResponse.h  GetModelProperties.h  GetModelPropertiesRequest.h  GetModelPropertiesResponse.h  GetModelState.h  GetModelStateRequest.h  GetModelStateResponse.h  GetPhysicsProperties.h  GetPhysicsPropertiesRequest.h  GetPhysicsPropertiesResponse.h  GetWorldProperties.h  GetWorldPropertiesRequest.h  (+38 more)
ros/kinetic/include/gazebo_plugins/: CameraSynchronizerConfig.h  GazeboRosCameraConfig.h  GazeboRosOpenniKinectConfig.h  HokuyoConfig.h
ros/kinetic/include/gazebo_ros/: PhysicsConfig.h
ros/kinetic/lib/: gazebo_dev.pc  gazebo_msgs.pc  gazebo_plugins.pc  gazebo_ros.pc  gazebo_ros_control.pc
ros/kinetic/lib/gazebo_plugins/: camera_synchronizer  hokuyo_node  pub_joint_trajectory_test
ros/kinetic/lib/gazebo_ros/: spawn_model
ros/kinetic/share/gazebo_dev/cmake/: gazebo_devConfig.cmake
ros/kinetic/share/gazebo_msgs/: CMakeLists.txt
ros/kinetic/share/gazebo_msgs/cmake/: gazebo_msgs-msg-extras.cmake  gazebo_msgs-msg-paths.cmake  gazebo_msgsConfig.cmake
ros/kinetic/share/gazebo_plugins/: CMakeLists.txt
ros/kinetic/share/gazebo_plugins/cmake/: gazebo_pluginsConfig-version.cmake  gazebo_pluginsConfig.cmake
ros/kinetic/share/gazebo_plugins/docs/: CameraSynchronizerConfig-usage.dox  CameraSynchronizerConfig.dox  CameraSynchronizerConfig.wikidoc  GazeboRosCameraConfig-usage.dox  GazeboRosCameraConfig.dox  GazeboRosCameraConfig.wikidoc  GazeboRosOpenniKinectConfig-usage.dox  HokuyoConfig-usage.dox  HokuyoConfig.dox  HokuyoConfig.wikidoc
ros/kinetic/share/gazebo_ros/: CMakeLists.txt
ros/kinetic/share/gazebo_ros_control/: CMakeLists.txt  package.xml
rviz/: default.rviz
scripts/: data-logger-publishing.awk  data_logger.sh  data_logger_publishing.awk  pub_waypoints.py
src/: TakeOffController.cpp  takeoff_sphinx_test_node.cpp
src/nodes/: hovering_example.cpp  hovering_example_spline.cpp  hovering_example_with_bebop.cpp  hovering_example_with_sphinx.cpp  position_controller_node.cpp  position_controller_node.h  position_controller_with_bebop_node.cpp  position_controller_with_bebop_node.h  position_controller_with_sphinx_node.cpp  position_controller_with_sphinx_node.h  quaternion_to_rpy.cpp  waypoint_example.cpp  waypoint_example_with_sphinx.cpp
urdf/: bebop.urdf.xacro  bebop.urdf_only_odometry_and_camera_with_wind.xacro  bebop.urdf_only_odometry_sensor.xacro  bebop.urdf_without_wind.xacro  bebop_base.urdf.xacro  multirotor_base.urdf.xacro  wind_turbine.base.urdf.xacro  wind_turbine.gazebo.xacro
worlds/: basic.world  basicTest.world
(+6 files in other folders)
